--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/ENGD_per_layer.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/ENGD_per_layer.yaml
@@ -8,7 +8,7 @@ command:
     - ${program}
     - "--wandb"
     - "--optimizer=ENGD"
-    - ${args}
+    - ${args_no_boolean_flags}
 metric:
     goal: minimize
     name: loss
