--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC_auto.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC_auto.yaml
@@ -1,6 +1,6 @@
 entity: kfac-pinns
-project: poisson5d_deep
-name: KFAC-forward-only-auto
+project: poisson5d
+name: KFAC-auto
 program: ../../train.py
 command:
     - ${env}
@@ -17,8 +17,6 @@ run_cap: 50
 parameters:
     boundary_condition:
         value: cos_sum
-    model:
-        value: mlp-tanh-64-48-32-16
     num_seconds:
         value: 3_000
     dim_Omega:
@@ -27,8 +25,6 @@ parameters:
         value: 3_000
     N_dOmega:
         value: 500
-    KFAC_ggn_type:
-        value: forward-only
     KFAC_ema_factor:
         distribution: uniform
         min: 0
