--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC_forward_only_auto.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC_forward_only_auto.yaml
@@ -1,5 +1,5 @@
 entity: kfac-pinns
-project: poisson5d_deep
+project: poisson5d
 name: KFAC-forward-only-auto
 program: ../../train.py
 command:
@@ -17,8 +17,6 @@ run_cap: 50
 parameters:
     boundary_condition:
         value: cos_sum
-    model:
-        value: mlp-tanh-64-48-32-16
     num_seconds:
         value: 3_000
     dim_Omega:
