--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/LBFGS.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/LBFGS.yaml
@@ -11,7 +11,7 @@ command:
     - ${args}
 metric:
     goal: minimize
-    name: loss
+    name: l2_error
 method: grid
 parameters:
     num_seconds:
