--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/ENGD_full.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/ENGD_full.yaml
@@ -11,7 +11,7 @@ command:
     - ${args_no_boolean_flags}
 metric:
     goal: minimize
-    name: loss
+    name: l2_error
 method: grid
 parameters:
     dim_Omega:
