--- a/kfac_pinns_exp/exp21_poisson_10d/sweeps/Adam.yaml
+++ b/kfac_pinns_exp/exp21_poisson_10d/sweeps/Adam.yaml
@@ -11,14 +11,14 @@ command:
     - ${args}
 metric:
     goal: minimize
-    name: loss
+    name: l2_error
 method: random
 run_cap: 50
 parameters:
     boundary_condition:
         value: u_weinan
     batch_frequency:
-        value: 50
+        value: 1
     model:
         value: mlp-tanh-256-256-128-128
     num_seconds:
