--- a/kfac_pinns_exp/exp21_poisson_10d/sweeps/LBFGS.yaml
+++ b/kfac_pinns_exp/exp21_poisson_10d/sweeps/LBFGS.yaml
@@ -11,13 +11,13 @@ command:
     - ${args}
 metric:
     goal: minimize
-    name: loss
+    name: l2_error
 method: grid
 parameters:
     boundary_condition:
         value: u_weinan
     batch_frequency:
-        value: 50
+        value: 1
     model:
         value: mlp-tanh-256-256-128-128
     num_seconds:
