--- a/kfac_pinns_exp/exp21_poisson_10d/sweeps/KFAC_auto.yaml
+++ b/kfac_pinns_exp/exp21_poisson_10d/sweeps/KFAC_auto.yaml
@@ -35,10 +35,9 @@ parameters:
         max: 0.99
     KFAC_damping:
         distribution: log_uniform_values
-        min: 1e-10
-        max: 1e-4
+        min: 1e-12
+        max: 1e-6
     KFAC_initialize_to_identity:
-        distribution: categorical
-        values: [false, true]
+        value: true
     KFAC_lr:
         value: auto
