--- a/kfac_pinns_exp/exp23_heat1d_mlp_tanh_256/sweeps/KFAC.yaml
+++ b/kfac_pinns_exp/exp23_heat1d_mlp_tanh_256/sweeps/KFAC.yaml
@@ -25,7 +25,7 @@ parameters:
         value: 1_000
     KFAC_ema_factor:
         distribution: uniform
-        min: 0
+        min: 0.5
         max: 0.99
     KFAC_momentum:
         distribution: uniform
@@ -33,8 +33,7 @@ parameters:
         max: 0.99
     KFAC_damping:
         distribution: log_uniform_values
-        min: 1e-13
+        min: 1e-14
         max: 1e-7
     KFAC_initialize_to_identity:
-        distribution: categorical
-        values: [false, true]
+        value: true
