--- a/kfac_pinns_exp/exp23_heat1d_mlp_tanh_256/sweeps/KFAC_auto.yaml
+++ b/kfac_pinns_exp/exp23_heat1d_mlp_tanh_256/sweeps/KFAC_auto.yaml
@@ -25,14 +25,13 @@ parameters:
         value: 1_000
     KFAC_ema_factor:
         distribution: uniform
-        min: 0
+        min: 0.5
         max: 0.99
     KFAC_damping:
         distribution: log_uniform_values
-        min: 1e-13
-        max: 1e-7
+        min: 1e-14
+        max: 1e-6
     KFAC_initialize_to_identity:
-        distribution: categorical
-        values: [false, true]
+        value: true
     KFAC_lr:
         value: auto
