--- a/kfac_pinns_exp/exp14_poisson_100d_weinan/sweeps/Adam.yaml
+++ b/kfac_pinns_exp/exp14_poisson_100d_weinan/sweeps/Adam.yaml
@@ -1,5 +1,5 @@
 entity: kfac-pinns
-project: weinan_norm
+project: poisson100d_weinan_norm
 name: Adam
 program: ../../train.py
 command:
@@ -11,25 +11,29 @@ command:
     - ${args}
 metric:
     goal: minimize
-    name: loss
-method: random
-run_cap: 50
+    name: l2_error
+method: bayes
 parameters:
     boundary_condition:
         value: u_weinan_norm
     model:
-        value: mlp-tanh-64-64-48-48
+        value: mlp-tanh-768-768-512-512
     num_seconds:
-        value: 3_000
-    data_loader:
-        value: GenerativeDataLoader
+        value: 10_000
     dim_Omega:
         value: 100
+    N_eval:
+        value: 30_000
     N_Omega:
-        value: 3_000
+        min: 100
+        max: 10_000
     N_dOmega:
-        value: 1_000
+        min: 50
+        max: 5_000
+    batch_frequency:
+        min: 0
+        max: 10_000
     Adam_lr:
         distribution: log_uniform_values
-        min: 5e-2
-        max: 5e-1
+        min: 1e-6
+        max: 1e-0
