--- a/kfac_pinns_exp/exp14_poisson_100d_weinan/sweeps/KFAC_auto.yaml
+++ b/kfac_pinns_exp/exp14_poisson_100d_weinan/sweeps/KFAC_auto.yaml
@@ -1,6 +1,6 @@
 entity: kfac-pinns
-project: weinan_norm
-name: KFAC-forward-only
+project: poisson100d_weinan_norm
+name: KFAC-auto
 program: ../../train.py
 command:
     - ${env}
@@ -11,38 +11,38 @@ command:
     - ${args_no_boolean_flags}
 metric:
     goal: minimize
-    name: loss
-method: random
-run_cap: 50
+    name: l2_error
+method: bayes
 parameters:
     boundary_condition:
         value: u_weinan_norm
     model:
-        value: mlp-tanh-64-64-48-48
+        value: mlp-tanh-768-768-512-512
     num_seconds:
-        value: 3_000
-    data_loader:
-        value: GenerativeDataLoader
+        value: 10_000
     dim_Omega:
         value: 100
+    N_eval:
+        value: 30_000
     N_Omega:
-        value: 3_000
+        min: 100
+        max: 10_000
     N_dOmega:
-        value: 1_000
-    KFAC_ggn_type:
-        value: forward-only
-    KFAC_ema_factor:
-        distribution: uniform
+        min: 50
+        max: 5_000
+    batch_frequency:
         min: 0
-        max: 0.99
-    KFAC_momentum:
+        max: 10_000
+    KFAC_ema_factor:
         distribution: uniform
         min: 0
         max: 0.99
     KFAC_damping:
         distribution: log_uniform_values
-        min: 1e-13
-        max: 1e-7
+        min: 1e-15
+        max: 1e-2
     KFAC_initialize_to_identity:
         distribution: categorical
         values: [false, true]
+    KFAC_lr:
+        value: auto
