--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ install_requires = # NOTE: Probably a good idea to pins versions for reproducibi
     hessianfree @ git+https://git@github.com/ltatzel/PyTorchHessianFree.git@daa6c749df3ac847b41191dc288da863fdd79be5
     pandas==2.2.1
     backpack-for-pytorch @ git+https://git@github.com/f-dangel/backpack.git@ggn-materialize-grad#egg=backpack-for-pytorch
+    arxiv-collector==0.4.1 # to create the arXiv submission
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
