--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         make install-test
+    - name: Install poppler and imagemagick
+      run: sudo apt-get install -y poppler-utils imagemagick
     - name: Run test
       run: |
         make test
