--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ install_requires = # NOTE: Probably a good idea to pins versions for reproducibi
     pandas==2.2.1
     backpack-for-pytorch @ git+https://git@github.com/f-dangel/backpack.git@ggn-materialize-grad#egg=backpack-for-pytorch
     arxiv-collector==0.4.1 # to create the arXiv submission
+    memory_profiler==0.61.0
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
