--- a/.github/workflows/lint-flake8.yaml
+++ b/.github/workflows/lint-flake8.yaml
@@ -12,11 +12,12 @@ jobs:
   flake8:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
     - name: Set up Python 3.9
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v5
       with:
         python-version: 3.9
+        cache: pip
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
