--- a/kfac_pinns_exp/exp15_poisson2d_deepwide/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp15_poisson2d_deepwide/sweeps/HessianFree.yaml
@@ -22,13 +22,13 @@ parameters:
         value: 1_000
     HessianFree_curvature_opt:
         distribution: categorical
-        values: ["ggn", "hessian"]
+        values: ["ggn"]
     HessianFree_damping:
         distribution: categorical
-        values: [1.0, 1e-1, 1e-2, 1e-3, 1e-4]
+        values: [5e-1, 2e-1, 1e-1, 5e-2, 2e-2, 1e-2, 5e-3, 2e-3, 1e-3]
     HessianFree_no_adapt_damping:
         distribution: categorical
-        values: [false, true]
+        values: [false]
     HessianFree_cg_max_iter:
         distribution: categorical
-        values: [50, 250]
+        values: [150, 200, 250, 300, 350, 400]
