--- a/kfac_pinns_exp/exp27_heat4d_small/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp27_heat4d_small/sweeps/HessianFree.yaml
@@ -30,13 +30,13 @@ parameters:
         value: sin_sum
     HessianFree_curvature_opt:
         distribution: categorical
-        values: ["ggn", "hessian"]
+        values: ["ggn"]
     HessianFree_damping:
         distribution: categorical
-        values: [1.0, 1e-1, 1e-2, 1e-3, 1e-4]
+        values: [10.0, 5.0, 2.0, 1.0, 5e-1, 2e-1, 1e-1, 5e-2, 2e-2, 1e-2]
     HessianFree_no_adapt_damping:
         distribution: categorical
-        values: [false, true]
+        values: [false]
     HessianFree_cg_max_iter:
         distribution: categorical
-        values: [50, 250]
+        values: [150, 200, 250, 300, 250]
