--- a/kfac_pinns_exp/exp29_heat4d_big/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp29_heat4d_big/sweeps/HessianFree.yaml
@@ -32,13 +32,13 @@ parameters:
         value: sin_sum
     HessianFree_curvature_opt:
         distribution: categorical
-        values: ["ggn", "hessian"]
+        values: ["ggn"]
     HessianFree_damping:
         distribution: categorical
-        values: [1.0, 1e-1, 1e-2, 1e-3, 1e-4]
+        values: [1e-1, 5e-2, 2e-2, 1e-2, 5e-3, 2e-3, 1e-3, 5e-4, 2e-4]
     HessianFree_no_adapt_damping:
         distribution: categorical
-        values: [false, true]
+        values: [false]
     HessianFree_cg_max_iter:
         distribution: categorical
-        values: [50, 250]
+        values: [150, 200, 250, 300, 350, 400]
