--- a/kfac_pinns_exp/exp22_heat1d_mlp_tanh_64/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp22_heat1d_mlp_tanh_64/sweeps/HessianFree.yaml
@@ -24,13 +24,13 @@ parameters:
         value: 1_000
     HessianFree_curvature_opt:
         distribution: categorical
-        values: ["ggn", "hessian"]
+        values: ["ggn"]
     HessianFree_damping:
         distribution: categorical
-        values: [100, 1.0, 1e-2, 1e-4, 1e-6]
+        values: [1.0, 5e-1, 1e-1, 5e-2, 1e-2, 5e-3, 1e-3, 5e-4, 1e-4]
     HessianFree_no_adapt_damping:
         distribution: categorical
-        values: [false, true]
+        values: [false]
     HessianFree_cg_max_iter:
         distribution: categorical
-        values: [50, 250]
+        values: [150, 200, 250, 300, 350, 400]
