--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ install_requires = # NOTE: Probably a good idea to pins versions for reproducibi
     wandb==0.16.3
     hessianfree @ git+https://git@github.com/ltatzel/PyTorchHessianFree.git@f430d815cfddf763728a73fa8c01ef916ab0d623
     pandas==2.2.1
-    backpack-for-pytorch @ git+https://git@github.com/f-dangel/backpack.git@ggn-materialize-grad#egg=backpack-for-pytorch
+    backpack-for-pytorch==1.7.1
     arxiv-collector==0.4.1 # to create the arXiv submission
     memory_profiler==0.61.0
 # The usage of test_requires is discouraged, see `Dependency Management` docs
